--- a/Expand10646Notation/Expand10646Notation.fsproj
+++ b/Expand10646Notation/Expand10646Notation.fsproj
@@ -5,14 +5,14 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>e38863e8-88ef-49ec-89ad-1ebbbbe3be21</ProjectGuid>
+    <ProjectGuid>95fe28d9-dbed-46ac-81cc-2906cb40bcbd</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CREPDL</RootNamespace>
-    <AssemblyName>CREPDL</AssemblyName>
+    <RootNamespace>Expand10646Notation</RootNamespace>
+    <AssemblyName>Expand10646Notation</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
-    <Name>CREPDL</Name>
+    <Name>Expand10646Notation</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,8 +23,9 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Debug\CREPDL.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Expand10646Notation.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
+    <StartArguments>"h:/Documents/visual studio 2015/Projects/CREPDL/CREPDL/302prep.txt" "h:/Documents/visual studio 2015/Projects/CREPDL/CREPDL/302.txt"</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,9 +35,23 @@
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Release\CREPDL.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Expand10646Notation.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Program.fs" />
+    <None Include="App.config" />
+  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
@@ -53,41 +68,6 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Basics.fs" />
-    <Compile Include="ThreeValuedBoolean.fs" />
-    <Compile Include="RedBlackTree.fs" />
-    <Compile Include="Dewey.fs" />
-    <Compile Include="Repertoire.fs" />
-    <Compile Include="ActivePattern.fs" />
-    <Compile Include="BMPTest.fs" />
-    <Compile Include="Char.fs" />
-    <Compile Include="GraphemeTest.fs" />
-    <Compile Include="ISO10646Collection.fs" />
-    <Compile Include="ReadingCREPDL.fs" />
-    <Compile Include="SurrogateAwareTextReader.fs" />
-    <Compile Include="Validation.fs" />
-    <Compile Include="TopLevelValidation.fs" />
-    <Compile Include="Main.fs" />
-    <None Include="App.config" />
-    <EmbeddedResource Include="IICORE.txt" />
-    <EmbeddedResource Include="JIExt.txt" />
-    <EmbeddedResource Include="JIS2004 IDEOGRAPHICS EXTENSION.txt" />
-    <EmbeddedResource Include="301.txt" />
-    <EmbeddedResource Include="302.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-  </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
