Finished syntactical tests of 10646 collections

--- a/CREPDLTest/CREPDLTest.fsproj
+++ b/CREPDLTest/CREPDLTest.fsproj
@@ -45,10 +45,13 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
+    <Compile Include="ConstructAllCollections.fs" />
     <Compile Include="Test.fs" />
   </ItemGroup>
   <ItemGroup>
