Added MES-1 and MES-2.

--- a/CREPDL/CREPDL.fsproj
+++ b/CREPDL/CREPDL.fsproj
@@ -74,6 +74,8 @@
     <EmbeddedResource Include="IICORE.txt" />
     <EmbeddedResource Include="JIExt.txt" />
     <EmbeddedResource Include="JIS2004 IDEOGRAPHICS EXTENSION.txt" />
+    <EmbeddedResource Include="281.txt" />
+    <EmbeddedResource Include="282.txt" />
     <EmbeddedResource Include="301.txt" />
     <EmbeddedResource Include="302.txt" />
   </ItemGroup>
