--- a/CREPDL/CREPDL.fsproj
+++ b/CREPDL/CREPDL.fsproj
@@ -60,10 +60,10 @@
     <Compile Include="RedBlackTree.fs" />
     <Compile Include="Dewey.fs" />
     <Compile Include="Repertoire.fs" />
+    <Compile Include="RepertoireCollection.fs" />
     <Compile Include="ActivePattern.fs" />
     <Compile Include="BMPTest.fs" />
     <Compile Include="Char.fs" />
-    <Compile Include="GraphemeTest.fs" />
     <Compile Include="ISO10646Collection.fs" />
     <Compile Include="ReadingCREPDL.fs" />
     <Compile Include="SurrogateAwareTextReader.fs" />
