Allow pre-defined collections to be defined by CREPDL.  Implemented more 10646 collections based on such pre-defined collections.

--- a/CREPDL/CREPDL.fsproj
+++ b/CREPDL/CREPDL.fsproj
@@ -59,12 +59,14 @@
     <Compile Include="ThreeValuedBoolean.fs" />
     <Compile Include="RedBlackTree.fs" />
     <Compile Include="Dewey.fs" />
+    <Compile Include="Registry.fs" />
     <Compile Include="Repertoire.fs" />
     <Compile Include="RepertoireCollection.fs" />
     <Compile Include="ActivePattern.fs" />
     <Compile Include="BMPTest.fs" />
     <Compile Include="Char.fs" />
     <Compile Include="ISO10646Collection.fs" />
+    <Compile Include="ExpandCollectionInCREPDL.fs" />
     <Compile Include="ReadingCREPDL.fs" />
     <Compile Include="SurrogateAwareTextReader.fs" />
     <Compile Include="Validation.fs" />
@@ -76,10 +78,13 @@
     <EmbeddedResource Include="JAPANESE IDEOGRAPHICS SUPPLEMENT.txt" />
     <EmbeddedResource Include="281.txt" />
     <EmbeddedResource Include="282.txt" />
+    <EmbeddedResource Include="-100285.txt" />
+    <EmbeddedResource Include="-200285.txt" />
     <EmbeddedResource Include="286.txt" />
     <EmbeddedResource Include="288.txt" />
     <EmbeddedResource Include="301.txt" />
     <EmbeddedResource Include="302.txt" />
+    <EmbeddedResource Include="-303.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
