Representation types of Repertoires, and misc

--- a/BMPTest/BMPTest.fsproj
+++ b/BMPTest/BMPTest.fsproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Unicode.fs" />
     <Compile Include="Test.fs" />
     <None Include="App.config" />
   </ItemGroup>
