--- a/ConsoleApplication/ConsoleApplication.fsproj
+++ b/ConsoleApplication/ConsoleApplication.fsproj
@@ -5,25 +5,25 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>e38863e8-88ef-49ec-89ad-1ebbbbe3be21</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>CREPDL</RootNamespace>
-    <AssemblyName>CREPDL</AssemblyName>
+    <ProjectGuid>d5cf3f82-45c0-4c0b-9de4-1f441824c6af</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>ConsoleApplication</RootNamespace>
+    <AssemblyName>ConsoleApplication</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
-    <Name>CREPDL</Name>
+    <Name>ConsoleApplication</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <Tailcalls>true</Tailcalls>
+    <Tailcalls>false</Tailcalls>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Debug\CREPDL.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\ConsoleApplication.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -34,9 +34,33 @@
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Release\CREPDL.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\ConsoleApplication.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="TopLevelValidation.fs" />
+    <Compile Include="Main.fs" />
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CREPDL\CREPDL.fsproj">
+      <Name>CREPDL</Name>
+      <Project>{e38863e8-88ef-49ec-89ad-1ebbbbe3be21}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
@@ -53,59 +77,6 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Basics.fs" />
-    <Compile Include="ThreeValuedBoolean.fs" />
-    <Compile Include="RedBlackTree.fs" />
-    <Compile Include="Dewey.fs" />
-    <Compile Include="Registry.fs" />
-    <Compile Include="Token.fs" />
-    <Compile Include="Repertoire.fs" />
-    <Compile Include="IVSChecker.fs" />
-    <Compile Include="ISO10646Collection.fs" />
-    <Compile Include="RepertoireCollection.fs" />
-    <Compile Include="ActivePattern.fs" />
-    <Compile Include="Char.fs" />
-    <Compile Include="ExpandCollectionInCREPDL.fs" />
-    <Compile Include="ReadingCREPDL.fs" />
-    <Compile Include="SurrogateAwareTextReader.fs" />
-    <Compile Include="Validation.fs" />
-    <Compile Include="GCValidation.fs" />
-    <None Include="App.config" />
-    <EmbeddedResource Include="IICORE.txt" />
-    <EmbeddedResource Include="JIExt.txt" />
-    <EmbeddedResource Include="JAPANESE IDEOGRAPHICS SUPPLEMENT.txt" />
-    <EmbeddedResource Include="281.txt" />
-    <EmbeddedResource Include="282.txt" />
-    <EmbeddedResource Include="-100285.txt" />
-    <EmbeddedResource Include="-200285.txt" />
-    <EmbeddedResource Include="286.txt" />
-    <EmbeddedResource Include="288.txt" />
-    <EmbeddedResource Include="301.txt" />
-    <EmbeddedResource Include="302.txt" />
-    <EmbeddedResource Include="-303.txt" />
-    <EmbeddedResource Include="-304.txt" />
-    <EmbeddedResource Include="-306.txt" />
-    <EmbeddedResource Include="-307.txt" />
-    <EmbeddedResource Include="308.txt" />
-    <EmbeddedResource Include="309.txt" />
-    <EmbeddedResource Include="310.txt" />
-    <EmbeddedResource Include="311.txt" />
-    <EmbeddedResource Include="314.txt" />
-    <EmbeddedResource Include="-340.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-  </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
