--- a/CREPDLUnitTest/packages.config
+++ b/CREPDLUnitTest/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Core" version="3.1.2.5" targetFramework="net452" />
-  <package id="FsUnit" version="2.3.2" targetFramework="net452" />
-  <package id="NUnit" version="3.5.0" targetFramework="net452" />
-  <package id="Unquote" version="3.1.2" targetFramework="net452" />
+  <package id="FSharp.Core" version="4.1.17" targetFramework="net452" />
+  <package id="NUnit" version="3.6.1" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
 </packages>
