Migration to ICU RegExp

--- a/CREPDLUnitTest/CREPDLUnitTest.fsproj
+++ b/CREPDLUnitTest/CREPDLUnitTest.fsproj
@@ -67,6 +67,10 @@
       <HintPath>..\packages\FSharp.Core.4.1.17\lib\net45\FSharp.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="icu.net">
+      <HintPath>..\packages\icu.net.2.2.0\lib\net40\icu.net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
