--- a/CREPDL/packages.config
+++ b/CREPDL/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Core" version="4.1.17" targetFramework="net452" />
-  <package id="icu.net" version="2.2.0" targetFramework="net452" />
-  <package id="Icu4c.Win.Full.Lib" version="56.1.21" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
+  <package id="FSharp.Core" version="4.6.1" targetFramework="net452" />
+  <package id="icu.net" version="2.5.4" targetFramework="net452" />
+  <package id="Icu4c.Win.Full.Lib" version="59.1.15" targetFramework="net452" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
