--- a/CREPDLUnitTest/packages.config
+++ b/CREPDLUnitTest/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Core" version="4.1.17" targetFramework="net452" />
-  <package id="icu.net" version="2.2.0" targetFramework="net452" />
-  <package id="NUnit" version="3.6.1" targetFramework="net452" />
-  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
+  <package id="FSharp.Core" version="4.6.1" targetFramework="net452" />
+  <package id="icu.net" version="2.5.4" targetFramework="net452" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="NUnit" version="3.11.0" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.12.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
