--- a/Expand10646Notation/packages.config
+++ b/Expand10646Notation/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Core" version="4.1.17" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
+  <package id="FSharp.Core" version="4.6.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
