Input param for invocation

--- a/ConsoleApplication/ConsoleApplication.fsproj
+++ b/ConsoleApplication/ConsoleApplication.fsproj
@@ -25,7 +25,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Debug\ConsoleApplication.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
-    <StartArguments>h:/Temp/test1.crepdl h:/Temp/test1.crepdl</StartArguments>
+    <StartArguments>h:/CREPDLScripts/examples/version2/graphemeClusterMode/IVDHanyo-Denshi.crepdl h:/CREPDLScripts/examples/version2/graphemeClusterMode/IVDHanyo-Denshi.crepdl</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,6 +38,8 @@
     <DocumentationFile>
     </DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
+    <StartArguments>
+    </StartArguments>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
