--- a/CREPDLUnitTest/CREPDLUnitTest.fsproj
+++ b/CREPDLUnitTest/CREPDLUnitTest.fsproj
@@ -60,10 +60,10 @@
     <Compile Include="RepertoireTest.fs" />
     <Compile Include="ISO10646CollectionTest.fs" />
     <Compile Include="CharMatcherTest.fs" />
-    <Compile Include="CheckExpandedScriptTest.fs" />
     <Compile Include="ActivePatternTest.fs" />
     <Compile Include="ReadCharacterTest.fs" />
     <Compile Include="ReadGraphemeClusterTest.fs" />
+    <Compile Include="CollectionValidationTest.fs" />
     <Compile Include="ValidationTest.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
