Visual Studio options

--- a/EPUBConsoleApplication/EPUBConsoleApplication.fsproj
+++ b/EPUBConsoleApplication/EPUBConsoleApplication.fsproj
@@ -25,7 +25,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\$(Configuration)\$(AssemblyName).XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
-    <StartArguments>g:/信貴山縁起/信貴山縁起.epub</StartArguments>
+    <StartArguments>"c:/Users/MURATA Makoto/Downloads/forJIS2004Check.epub"</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
