Collection 287 (Common Japanese)を追加

--- a/CREPDL/CREPDL.fsproj
+++ b/CREPDL/CREPDL.fsproj
@@ -86,6 +86,7 @@
     <EmbeddedResource Include="-100285.txt" />
     <EmbeddedResource Include="-200285.txt" />
     <EmbeddedResource Include="286.txt" />
+    <EmbeddedResource Include="-287.txt" />
     <EmbeddedResource Include="288.txt" />
     <EmbeddedResource Include="301.txt" />
     <EmbeddedResource Include="302.txt" />
